--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
                               </div>
                            </div>
                            <div class="pbmit-ihbox-headingicon">
-                              <h4 class="pbmit-element-heading"> Book Your</h4>
-                              <h2 class="pbmit-element-title">Appointment</h2>
+                              <h4 class="pbmit-element-heading"> Abogados Online</h4>
+                              <h2 class="pbmit-element-title">Consultar</h2>
                            </div>
                         </div>
                      </div>
@@ -280,8 +280,8 @@
                               </div>
                            </div>
                            <div class="pbmit-ihbox-headingicon">
-                              <h4 class="pbmit-element-heading"> Get Free</h4>
-                              <h2 class="pbmit-element-title"> Expert Advice</h2>
+                              <h4 class="pbmit-element-heading"> Consultas y Asesorias</h4>
+                              <h2 class="pbmit-element-title"> Solicite un experto</h2>
                            </div>
                         </div>
                      </div>
@@ -297,8 +297,8 @@
                               </div>
                            </div>
                            <div class="pbmit-ihbox-headingicon">
-                              <h4 class="pbmit-element-heading">You Can Easily</h4>
-                              <h2 class="pbmit-element-title">Join Our Team</h2>
+                              <h4 class="pbmit-element-heading">Defensa y acompañamiento</h4>
+                              <h2 class="pbmit-element-title">ver Especialidades</h2>
                            </div>
                         </div>
                      </div>
