--- a/index-04.html
+++ b/index-04.html
@@ -164,8 +164,8 @@
                      <rs-slides style="overflow: hidden; position: absolute;">
                         <rs-slide style="position: absolute;" data-key="rs-1" data-title="Slide" data-thumb="revolution/images/attorly-s1-bg-50x100.png" data-in="o:0;" data-out="a:false;">
                            <img src="revolution/images/attorly-s1-bg.png" alt="" title="attorly-s1-bg" width="1920" height="920" class="rev-slidebg tp-rs-img" data-no-retina>
-      <!--
-                           --><a
+                            
+                              <a
                               id="slider-1-slide-1-layer-0" 
                               class="rs-layer pbmit-rev-btn-effect-reverse rev-btn"
                               href="https://attorly-demo.pbminfotech.com/demo1/contact-us/" target="_self"
@@ -180,11 +180,10 @@
                               data-frame_1="st:2800;sp:1000;"
                               data-frame_999="o:0;st:w;sR:5200;"
                               data-frame_hover="bgc:#0a1d35;bor:0px,0px,0px,0px;bri:120%;"
-                              style="z-index:13;background-color:#b8967e;font-family:'Marcellus';"
-                           ><span class="pbmit-rev-button-text">Contact Us</span> 
-                           </a><!--
+                              style="z-index:13;background-color:#b8967e;font-family:'Marcellus';"><span class="pbmit-rev-button-text">Contact Us</span> 
+                              </a>
 
-                           --><rs-layer
+                              <rs-layer
                               id="slider-1-slide-1-layer-1" 
                               data-type="image"
                               data-rsp_ch="on"
@@ -193,11 +192,10 @@
                               data-dim="w:168px,138px,104px,64px;h:192px,158px,120px,74px;"
                               data-basealign="slide"
                               data-frame_999="o:0;st:w;sR:8700;"
-                              style="z-index:6;"
-                           ><img src="revolution/images/attorly-s1-img-03.png" alt="" class="tp-rs-img" width="168" height="192" data-no-retina> 
-                           </rs-layer><!--
+                              style="z-index:6;"><img src="revolution/images/attorly-s1-img-03.png" alt="" class="tp-rs-img" width="168" height="192" data-no-retina> 
+                              </rs-layer>
 
-                           --><rs-layer
+                              <rs-layer
                               id="slider-1-slide-1-layer-2" 
                               data-type="image"
                               data-rsp_ch="on"
@@ -207,11 +205,10 @@
                               data-frame_0="sX:0.9;sY:0.9;"
                               data-frame_1="e:power2.inOut;st:900;sp:1000;sR:900;"
                               data-frame_999="o:0;st:w;sR:7100;"
-                              style="z-index:7;"
-                           ><img src="revolution/images/attorly-s1-img-02.png" alt="" class="tp-rs-img" width="536" height="472" data-no-retina> 
-                           </rs-layer><!--
+                              style="z-index:7;"><img src="revolution/images/attorly-s1-img-02.png" alt="" class="tp-rs-img" width="536" height="472" data-no-retina> 
+                              </rs-layer>
 
-                           --><rs-layer
+                              <rs-layer
                               id="slider-1-slide-1-layer-3" 
                               data-type="image"
                               data-rsp_ch="on"
@@ -221,11 +218,10 @@
                               data-frame_0="sX:0.9;sY:0.9;"
                               data-frame_1="e:power2.inOut;st:1000;sp:1000;sR:1000;"
                               data-frame_999="o:0;st:w;sR:7000;"
-                              style="z-index:8;"
-                           ><img src="revolution/images/attorly-s1-img-01.png" alt="" class="tp-rs-img" width="530" height="913" data-no-retina> 
-                           </rs-layer><!--
+                              style="z-index:8;"><img src="revolution/images/attorly-s1-img-01.png" alt="" class="tp-rs-img" width="530" height="913" data-no-retina> 
+                              </rs-layer>
 
-                           --><rs-layer
+                              <rs-layer
                               id="slider-1-slide-1-layer-4" 
                               data-type="text"
                               data-color="#0a1d35"
@@ -235,11 +231,10 @@
                               data-frame_0="x:50,41,31,19;"
                               data-frame_1="st:1400;sp:1000;sR:1400;"
                               data-frame_999="o:0;st:w;sR:6600;"
-                              style="z-index:9;font-family:'Marcellus';text-transform:uppercase;"
-                           >Leave court to us 
-                           </rs-layer><!--
+                              style="z-index:9;font-family:'Marcellus';text-transform:uppercase;">Leave court to us 
+                              </rs-layer>
 
-                           --><rs-layer
+                              <rs-layer
                               id="slider-1-slide-1-layer-5" 
                               data-type="text"
                               data-color="#0a1d35"
@@ -249,48 +244,44 @@
                               data-frame_0="x:50,41,31,19;"
                               data-frame_1="st:1700;sp:1000;sR:1700;"
                               data-frame_999="o:0;st:w;sR:6300;"
-                              style="z-index:10;font-family:'Marcellus';"
-                           >  A law firm with a <br>
-      <span class="globalcolor pbmit-text-underline">passion</span> for success 
-                           </rs-layer><!--
+                              style="z-index:10;font-family:'Marcellus';">  A law firm with a <br>
+                              <span class="globalcolor pbmit-text-underline">passion</span> for success 
+                              </rs-layer>
 
-                           --><rs-layer
-                              id="slider-1-slide-1-layer-7" 
-                              data-type="text"
-                              data-color="#0a1d35"
-                              data-rsp_ch="on"
-                              data-xy="x:r;xo:140px,80px,60px,37px;y:m;yo:62px,101px,76px,46px;"
-                              data-text="w:normal;s:18,17,12,7;l:28,23,17,10;"
-                              data-vbility="t,t,f,f"
-                              data-frame_0="y:50,41,31,19;"
-                              data-frame_1="st:2000;sp:1000;sR:2000;"
-                              data-frame_999="o:0;st:w;sR:6000;"
-                              style="z-index:11;font-family:'Montserrat';"
-                           >The lawyers are both experienced and highly skilled. 
-                           </rs-layer><!--
+                              <rs-layer
+                                 id="slider-1-slide-1-layer-7" 
+                                 data-type="text"
+                                 data-color="#0a1d35"
+                                 data-rsp_ch="on"
+                                 data-xy="x:r;xo:140px,80px,60px,37px;y:m;yo:62px,101px,76px,46px;"
+                                 data-text="w:normal;s:18,17,12,7;l:28,23,17,10;"
+                                 data-vbility="t,t,f,f"
+                                 data-frame_0="y:50,41,31,19;"
+                                 data-frame_1="st:2000;sp:1000;sR:2000;"
+                                 data-frame_999="o:0;st:w;sR:6000;"
+                                 style="z-index:11;font-family:'Montserrat';">The lawyers are both experienced and highly skilled. 
+                              </rs-layer>
 
-                           --><a
-                              id="slider-1-slide-1-layer-8" 
-                              class="rs-layer pbmit-rev-btn-effect rev-btn"
-                              href="https://attorly-demo.pbminfotech.com/demo1/portfolio/tax-consultancy/" target="_self"
-                              data-type="button"
-                              data-rsp_ch="on"
-                              data-xy="x:r,r,r,c;xo:424px,313px,222px,0;y:m;yo:147px,171px,151px,40px;"
-                              data-text="w:normal;s:16,16,16,14;l:50,50,45,40;ls:0.4px,0px,0px,0px;"
-                              data-dim="minh:0px,none,none,none;"
-                              data-padding="r:30,30,28,25;l:30,30,28,25;"
-                              data-frame_0="y:50,41,31,19;"
-                              data-frame_1="st:2400;sp:1000;sR:2400;"
-                              data-frame_999="o:0;st:w;sR:5600;"
-                              data-frame_hover="bgc:#0a1d35;bor:0px,0px,0px,0px;bri:120%;"
-                              style="z-index:12;background-color:#b8967e;font-family:'Marcellus';"
-                           ><span class="pbmit-rev-button-text">Recent Work</span> 
-                           </a><!--
-      -->                  </rs-slide>
+                              <a
+                                 id="slider-1-slide-1-layer-8" 
+                                 class="rs-layer pbmit-rev-btn-effect rev-btn"
+                                 href="https://attorly-demo.pbminfotech.com/demo1/portfolio/tax-consultancy/" target="_self"
+                                 data-type="button"
+                                 data-rsp_ch="on"
+                                 data-xy="x:r,r,r,c;xo:424px,313px,222px,0;y:m;yo:147px,171px,151px,40px;"
+                                 data-text="w:normal;s:16,16,16,14;l:50,50,45,40;ls:0.4px,0px,0px,0px;"
+                                 data-dim="minh:0px,none,none,none;"
+                                 data-padding="r:30,30,28,25;l:30,30,28,25;"
+                                 data-frame_0="y:50,41,31,19;"
+                                 data-frame_1="st:2400;sp:1000;sR:2400;"
+                                 data-frame_999="o:0;st:w;sR:5600;"
+                                 data-frame_hover="bgc:#0a1d35;bor:0px,0px,0px,0px;bri:120%;"
+                                 style="z-index:12;background-color:#b8967e;font-family:'Marcellus';"><span class="pbmit-rev-button-text">Recent Work</span> 
+                              </a>
+                        </rs-slide>
                         <rs-slide style="position: absolute;" data-key="rs-5" data-title="Slide" data-thumb="revolution/images/slider-01-img-b1-50x100.jpg" data-in="o:0;" data-out="a:false;">
                            <img src="revolution/images/slider-01-img-b1.jpg" alt="" title="slider-01-img-b1" width="1920" height="940" class="rev-slidebg tp-rs-img" data-no-retina>
-      <!--
-                           --><a
+                           <a
                               id="slider-1-slide-5-layer-0" 
                               class="rs-layer pbmit-rev-btn-effect-reverse rev-btn"
                               href="https://attorly-demo.pbminfotech.com/demo1/contact-us/" target="_self"
@@ -305,11 +296,9 @@
                               data-frame_1="st:2800;sp:1000;"
                               data-frame_999="o:0;st:w;sR:5600;"
                               data-frame_hover="bgc:#0a1d35;bor:0px,0px,0px,0px;bri:120%;"
-                              style="z-index:13;background-color:#b8967e;font-family:'Marcellus';"
-                           ><span class="pbmit-rev-button-text">Contact Us</span> 
-                           </a><!--
-
-                           --><rs-layer
+                              style="z-index:13;background-color:#b8967e;font-family:'Marcellus';"><span class="pbmit-rev-button-text">Contact Us</span> 
+                           </a>
+                           <rs-layer
                               id="slider-1-slide-5-layer-3" 
                               data-type="image"
                               data-rsp_ch="on"
@@ -319,11 +308,9 @@
                               data-frame_0="sX:0.9;sY:0.9;"
                               data-frame_1="e:power2.inOut;st:1000;sp:1000;sR:1000;"
                               data-frame_999="o:0;st:w;sR:7000;"
-                              style="z-index:8;"
-                           ><img src="revolution/images/slider-01-img-b2.png" alt="" class="tp-rs-img" width="890" height="716" data-no-retina> 
-                           </rs-layer><!--
-
-                           --><rs-layer
+                              style="z-index:8;"><img src="revolution/images/slider-01-img-b2.png" alt="" class="tp-rs-img" width="890" height="716" data-no-retina> 
+                           </rs-layer>
+                           <rs-layer
                               id="slider-1-slide-5-layer-4" 
                               data-type="text"
                               data-color="#0a1d35"
@@ -333,11 +320,9 @@
                               data-frame_0="x:50,41,31,19;"
                               data-frame_1="st:1400;sp:1000;sR:1400;"
                               data-frame_999="o:0;st:w;sR:6600;"
-                              style="z-index:9;font-family:'Marcellus';text-transform:uppercase;"
-                           >Leave court to us 
-                           </rs-layer><!--
-
-                           --><rs-layer
+                              style="z-index:9;font-family:'Marcellus';text-transform:uppercase;">Leave court to us 
+                           </rs-layer>
+                           <rs-layer
                               id="slider-1-slide-5-layer-5" 
                               data-type="text"
                               data-color="#0a1d35"
@@ -347,12 +332,10 @@
                               data-frame_0="x:50,41,31,19;"
                               data-frame_1="st:1700;sp:1000;sR:1700;"
                               data-frame_999="o:0;st:w;sR:6300;"
-                              style="z-index:10;font-family:'Marcellus';"
-                           >  A law firm with a <br>
-      <span class="globalcolor pbmit-text-underline">passion</span> for success 
-                           </rs-layer><!--
-
-                           --><rs-layer
+                              style="z-index:10;font-family:'Marcellus';">  A law firm with a <br>
+                              <span class="globalcolor pbmit-text-underline">passion</span> for success 
+                           </rs-layer>
+                           <rs-layer
                               id="slider-1-slide-5-layer-7" 
                               data-type="text"
                               data-color="#0a1d35"
@@ -363,11 +346,9 @@
                               data-frame_0="y:50,41,31,19;"
                               data-frame_1="st:2000;sp:1000;sR:2000;"
                               data-frame_999="o:0;st:w;sR:6000;"
-                              style="z-index:11;font-family:'Montserrat';"
-                           >The lawyers are both experienced and highly skilled. 
-                           </rs-layer><!--
-
-                           --><a
+                              style="z-index:11;font-family:'Montserrat';">The lawyers are both experienced and highly skilled. 
+                           </rs-layer>
+                           <a
                               id="slider-1-slide-5-layer-8" 
                               class="rs-layer pbmit-rev-btn-effect rev-btn"
                               href="https://attorly-demo.pbminfotech.com/demo1/portfolio/tax-consultancy/" target="_self"
@@ -381,18 +362,17 @@
                               data-frame_1="st:2400;sp:1000;sR:2400;"
                               data-frame_999="o:0;st:w;sR:5600;"
                               data-frame_hover="bgc:#0a1d35;bor:0px,0px,0px,0px;bri:120%;"
-                              style="z-index:12;background-color:#b8967e;font-family:'Marcellus';"
-                           ><span class="pbmit-rev-button-text">Recent Work</span> 
-                           </a><!--
-      -->                  </rs-slide>
+                              style="z-index:12;background-color:#b8967e;font-family:'Marcellus';"><span class="pbmit-rev-button-text">Recent Work</span> 
+                           </a>
+                        </rs-slide>
                      </rs-slides>
                   </rs-module>
                   <script>
                      
                   </script>
-      <script>
-            if(typeof revslider_showDoubleJqueryError === "undefined") {function revslider_showDoubleJqueryError(sliderID) {console.log("You have some jquery.js library include that comes after the Slider Revolution files js inclusion.");console.log("To fix this, you can:");console.log("1. Set 'Module General Options' -> 'Advanced' -> 'jQuery & OutPut Filters' -> 'Put JS to Body' to on");console.log("2. Find the double jQuery.js inclusion and remove it");return "Double Included jQuery Library";}}
-      </script>
+                  <script>
+                        if(typeof revslider_showDoubleJqueryError === "undefined") {function revslider_showDoubleJqueryError(sliderID) {console.log("You have some jquery.js library include that comes after the Slider Revolution files js inclusion.");console.log("To fix this, you can:");console.log("1. Set 'Module General Options' -> 'Advanced' -> 'jQuery & OutPut Filters' -> 'Put JS to Body' to on");console.log("2. Find the double jQuery.js inclusion and remove it");return "Double Included jQuery Library";}}
+                  </script>
                </rs-module-wrap>
                <!-- END REVOLUTION SLIDER -->
             </div>
@@ -1780,7 +1760,7 @@
          </footer>
          <!-- footer End -->
 
-   </div>
+      </div>
    <!-- page wrapper End -->
 
    <!-- Search Box Start Here -->
