--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>About Us Dark 2 – Attorly Demo HTML Template</title>
+      <title>Legales | Firma de bogados en Medellín</title>
       <meta name="robots" content="noindex, follow" />
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -51,7 +51,7 @@
                            <div class="site-branding">
                               <h1 class="site-title">
                                  <a href="index.html">
-                                    <img class="logo-img" src="images/logo3.png" alt="Attorly Demo 4">
+                                    <img class="logo-img" src="images/logo3.png" alt="©LEGALES">
                                  </a>
                               </h1>
                            </div>
@@ -100,6 +100,25 @@
                                  </div>
                               </nav>
                            </div>
+                           <div class="site-navigation ml-auto">
+                              <nav class="main-menu navbar-expand-xl navbar-light">
+                                 <div class="navbar-header">
+                                    <!-- Toggle Button --> 
+                                    <button class="navbar-toggler" type="button">
+                                       <i class="fa fa-whatsapp"></i>
+                                    </button>
+                                 </div>
+                                 <div class="pbmit-mobile-menu-bg"></div>
+                                 <div class="collapse navbar-collapse clearfix show" id="pbmit-menu">
+                                    <div class="pbmit-menu-wrap">
+                                       <span class="closepanel">
+                                          <i class="fa fa-whatsapp"></i>
+                                       </span>
+                                       <a href="https://api.whatsapp.com/send?phone=573026231220&text=Hola%21%20Quisiera%20m%C3%A1s%20contratar%20un%20defensor" target="_blank" style="color: green;">Chat</a>
+                                    </div>
+                                 </div>
+                              </nav>
+                           </div>
                            <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
@@ -124,14 +143,14 @@
                   <div class="pbmit-title-bar-content-inner">
                      <div class="pbmit-tbar">
                         <div class="pbmit-tbar-inner container">
-                           <h1 class="pbmit-tbar-title">About Us Dark 2</h1>
+                           <h1 class="pbmit-tbar-title">Firma de abogados</h1>
                         </div>
                      </div>
                      <div class="pbmit-breadcrumb">
                         <div class="pbmit-breadcrumb-inner">
-                           <span><a title="" href="#" class="home"><span>ATTORLY</span></a></span>
+                           <span><a title="" href="#" class="home"><span>Inicio</span></a></span>
                            <span class="sep"><i class="pbmit-base-icon-angle-double-right"></i></span>
-                           <span><span class="post-root post post-post current-item">About Us Dark 2</span></span>
+                           <span><span class="post-root post post-post current-item">Quiene somos? </span></span>
                         </div>
                      </div>
                   </div>
@@ -150,11 +169,11 @@
                      <div class="col-xl-6 col-lg-12">
                         <div class="about-dark2-left-section">
                            <div class="pbmit-heading bg-color-dark animation-style2">
-                              <h2 class="pbmit-title">We solve complex business issues</h2>
-                              <div class="pbmit-heading-desc">At Powerlegal Law Firm, we have designed a community of legal service providers (lawyers, paralegals, legal assistants, nurses and other business partners.</div>
+                              <h2 class="pbmit-title">Quienes somos?</h2>
+                              <div class="pbmit-heading-desc">Somos Legales, una firma de abogados en Medellín. Nuestro equipo de abogados altamente capacitados lo acompañará en cada etapa y se ocupará de cualquier problema que pueda surgir en el camino. Contamos con un grupo de abogados altamente capacitados dispuestos para acompañarl@s en cada etapa de su proceso legal y se ocupará de atendercualquier problema que pueda surgir en el camino.</div>
                            </div>
                            <a href="service-details.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white">
-                              <span>View All Service</span>
+                              <span>Somos especialistas en areas de</span>
                            </a>
                         </div>
                      </div>
@@ -168,9 +187,8 @@
                                     </div>
                                  </div>
                                  <div class="pbmit-ihbox-contents">
-                                    <h2 class="pbmit-element-title"> Trust & Estates </h2>
-                                    <div class="pbmit-heading-desc">Our culture nurtures and strives to achieve innovation,
-                                        creativity legal expertise.</div>
+                                    <h2 class="pbmit-element-title"> ALcoholemia </h2>
+                                    <div class="pbmit-heading-desc">Sabemos la gravedad de estos casos, por ello buscamos manejar el caso partiendo desde el proceso para detectar el grado del mismo, punto de suma importancia para su defensa.</div>
                                  </div>
                               </div>
                            </div>
@@ -182,9 +200,8 @@
                                     </div>
                                  </div>
                                  <div class="pbmit-ihbox-contents">
-                                    <h2 class="pbmit-element-title"> Civil Litigation </h2>
-                                    <div class="pbmit-heading-desc">Our culture nurtures and strives to achieve innovation,
-                                        creativity legal expertise.</div>
+                                    <h2 class="pbmit-element-title"> Derecho civil </h2>
+                                    <div class="pbmit-heading-desc">Hacemos que su caso sea resuelto de una manera comoda partiendo siempre de la seriedad y compromiso, damos respuestas a matrimonios, divorsios, patria potestad, demandas y defensas para empresas.</div>
                                  </div>
                               </div>
                            </div>
@@ -196,9 +213,8 @@
                                     </div>
                                  </div>
                                  <div class="pbmit-ihbox-contents">
-                                    <h2 class="pbmit-element-title"> Best Legal Defense </h2>
-                                    <div class="pbmit-heading-desc">Our culture nurtures and strives to achieve innovation,
-                                        creativity legal expertise.</div>
+                                    <h2 class="pbmit-element-title"> Derecho penal </h2>
+                                    <div class="pbmit-heading-desc">Atendemos solicitudes para solucionar la demanda que presente, trabajamos para empresas y personas naturales.</div>
                                  </div>
                               </div>
                            </div>
@@ -210,9 +226,8 @@
                                     </div>
                                  </div>
                                  <div class="pbmit-ihbox-contents">
-                                    <h2 class="pbmit-element-title"> Civil Litigation </h2>
-                                    <div class="pbmit-heading-desc">Our culture nurtures and strives to achieve innovation,
-                                        creativity legal expertise.</div>
+                                    <h2 class="pbmit-element-title"> Bienes raices o Inmobiliario </h2>
+                                    <div class="pbmit-heading-desc">Nos ocupamos de contratos para adquisiciones y rentas, damos asesorias y acompañamiento.</div>
                                  </div>
                               </div>
                            </div>
