--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
                                              <a href="#">Nosotros</a>
                                              <ul>
                                                 <li><a href="nosotros.html">Quienes somos</a></li>
-                                                <li><a href="#">Abogados</a></li>
+                                                <li><a href="nosotros.html#equipo">Abogados</a></li>
                                                 <li><a href="#">FAQ</a></li>
                                              </ul>
                                           <li class="dropdown">
-                                             <a href="#">Especialidades</a>
-                                            <!--  <ul>
-                                                <li><a href="#">Service Detail</a></li>
-                                                <li><a href="#">Service Detail</a></li>
-                                                <li><a href="#">Service Detail</a></li>
-                                                <li><a href="#">Service Detail</a></li>
-                                             </ul> -->
+                                             <a href="">Especialidades</a>
+                                            <ul>
+                                                <li><a href="derechocivil.html">Derecho Penal</a></li>
+                                                <li><a href="#">Derecho civil</a></li>
+                                                <li><a href="#">Derecho inmobiliario</a></li>
+                                                <li><a href="#">Alcoholemia</a></li>
+                                             </ul> 
                                           </li>
 
                                           
