--- a/nosotros.html
+++ b/nosotros.html
@@ -246,7 +246,7 @@
                      <div class="col-md-6">
                         <div class="about-dark-left-section">
                            <div class="pbmit-heading animation-style2">
-                              <h2 class="pbmit-title">Legalmente avalados y certificados.</h2>
+                              <h4 class="pbmit-title">Legalmente avalados y certificados.</h4>
                               <h2 class="pbmit-title">¿Como nos identificamos?</h2>
                               <div class="pbmit-heading-desc">
                                 <h2> Mision </h2>
@@ -307,86 +307,191 @@
                </div>
             </section> 
 
-            <section class="active-onhover pbmit-element-static-box-style-1">
+            <section class="service-section-home1 pbmit-element-service-style-1" data-cursor="global-color">
+               <div class="container">
+                  <div class="pbmit-heading  text-left bg-color-dark animation-style2">
+                     <h2 class="pbmit-title">¿Porque elegirnos?</h2>
+                  </div> 
+               </div>
                <div class="container-fluid">
                   <div class="row">
-                     <article class="pbmit-static-box-style-1 col-md-4">
-                        <div class="pbmit-bg-imgbox pbmit-bg-imgbox-one"></div>
-                        <div class="pbmit-responsive-img">
-                           <img src="images/staticbox-01.jpg" alt="Best Legal  Defense">
-                        </div>
-                        <div class="pbmit-contentbox">
-                           <div class="pbmit-contentbox-inner d-flex justify-content-between align-items-center">
-                              <div class="pbminfotech-box-title">
-                                 <h4>¿Porque elegirnos?</h4>
+                     <div class="col-md-12">
+                        <div class="swiper-slider pbmit-element-service-style-1"  data-cursor-text="Drag" data-loop="true" data-autoplay="false" data-dots="false" data-arrows="false"  data-columns="2.5" data-margin="30" data-effect="slide">
+                           <div class="pbmit-ele-header-area"></div>
+                           <div class="swiper-wrapper">
+                              <div class="swiper-slide">                           
+                                 <!-- Slide1 -->
+                                 <article class="pbmit-service-style-1">
+                                    <div class="pbminfotech-post-item">
+                                       <div class="d-flex">
+                                          <div class="pbmit-service-image-wrapper" style="background-image:url('images/services/service-01.jpg')">
+                                             <div class="pbmit-featured-img-wrapper">
+                                                <div class="pbmit-featured-wrapper">
+                                                   <img src="images/services/service-01.jpg" class="img-fluid" alt="">
+                                                </div>
+                                             </div>
+                                          </div>
+                                          <div class="pbminfotech-box-content pbmit-text-color-white ">
+                                             <div class="pbminfotech-box-number">01</div>
+                                             <h3 class="pbmit-service-title">
+                                                <a href="#">Competitivos</a></h3>
+                                             <div class="pbmit-service-content">
+                                                <div class="at-above-post-homepage addthis_tool"></div>
+                                                <p>
+                                                   Hemos resuelto los procesos de Alcholemia-Penal mas complejos de la ciudad de Medellin. <br> Nuestros abogados tienen más de 10 años de experiencia legal colectiva.
+                                                </p>
+                                                <div class="at-below-post-homepage addthis_tool"></div>
+                                             </div>
+                                             <div class="pbmit-service-icon-wrapper">
+                                                <i class="pbmit-attorly-icon pbmit-attorly-icon-gavel-2"></i>           
+                                             </div>
+                                             <div class="pbmit-service-btn"> 
+                                                <a class="btn-arrow" href="service-details.html"></a>
+                                             </div>
+                                          </div>
+                                       </div>
+                                    </div>
+                                 </article>
                               </div>
-                              <div class="pbmit-ihbox-icon">
-                                 <div class="pbmit-icon-wrapper pbmit-icon-type-icon">
-                                    <i class="pbmit-attorly-icon pbmit-attorly-icon-gavel-2"></i>
-                                 </div>
+                              <div class="swiper-slide">
+                                 <!-- Slide2 -->
+                                 <article class="pbmit-service-style-1">
+                                    <div class="pbminfotech-post-item">
+                                       <div class="d-flex">
+                                          <div class="pbmit-service-image-wrapper" style="background-image:url('images/services/service-02.jpg')">
+                                             <div class="pbmit-featured-img-wrapper">
+                                                <div class="pbmit-featured-wrapper">
+                                                   <img src="images/services/service-02.jpg" class="img-fluid" alt="">
+                                                </div>
+                                             </div>
+                                          </div>
+                                          <div class="pbminfotech-box-content pbmit-text-color-white ">
+                                             <div class="pbminfotech-box-number">02</div>
+                                             <h3 class="pbmit-service-title">
+                                                <a href="#">Real Estate Law Firms</a></h3>
+                                             <div class="pbmit-service-content">
+                                                <div class="at-above-post-homepage addthis_tool"></div>
+                                                <p>
+                                                   Diam magna consectetur nunc tristique consequat. Integer venenatis nec rutrum.
+                                                </p>
+                                                <div class="at-below-post-homepage addthis_tool"></div>
+                                             </div>
+                                             <div class="pbmit-service-icon-wrapper">
+                                                <i class="pbmit-attorly-icon pbmit-attorly-icon-oath"></i>           
+                                             </div>
+                                             <div class="pbmit-service-btn"> 
+                                                <a class="btn-arrow" href="service-details.html"></a>
+                                             </div>
+                                          </div>
+                                       </div>
+                                    </div>
+                                 </article>
                               </div>
-                           </div>
-                           <div class="pbminfotech-static-box-desc">Hemos resuelto los procesos de Alcholemia-Penal mas complejos de la ciudad de Medellin. </div>
-                           <div class="pbminfotech-static-box-desc">Nuestros abogados tienen más de 10 años de experiencia legal colectiva.</div>
-
-                           <div class="pbmit-ihbox-btn">
-                              <a href="contacto.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
-                                 <span>Contactanos</span>
-                              </a>
-                           </div>
-                        </div>
-                     </article>
-                     <article class="pbmit-static-box-style-1 col-md-4">
-                        <div class="pbmit-bg-imgbox pbmit-bg-imgbox-two"></div>
-                        <div class="pbmit-responsive-img">
-                           <img src="images/staticbox-01.jpg" alt="Best Legal  Defense">
-                        </div>
-                        <div class="pbmit-contentbox">
-                           <div class="pbmit-contentbox-inner d-flex justify-content-between align-items-center">
-                              <div class="pbminfotech-box-title">
-                                 <h4>¿Porque elegirnos?</h4>
+                              <div class="swiper-slide">
+                                 <!-- Slide3 -->
+                                 <article class="pbmit-service-style-1">
+                                    <div class="pbminfotech-post-item">
+                                       <div class="d-flex">
+                                          <div class="pbmit-service-image-wrapper" style="background-image:url('images/services/service-03.jpg')">
+                                             <div class="pbmit-featured-img-wrapper">
+                                                <div class="pbmit-featured-wrapper">
+                                                   <img src="images/services/service-03.jpg" class="img-fluid" alt="">
+                                                </div>
+                                             </div>
+                                          </div>
+                                          <div class="pbminfotech-box-content pbmit-text-color-white ">
+                                             <div class="pbminfotech-box-number">03</div>
+                                             <h3 class="pbmit-service-title">
+                                                <a href="#">International Law & Justice</a></h3>
+                                             <div class="pbmit-service-content">
+                                                <div class="at-above-post-homepage addthis_tool"></div>
+                                                <p>
+                                                   Diam magna consectetur nunc tristique consequat. Integer venenatis nec rutrum.
+                                                </p>
+                                                <div class="at-below-post-homepage addthis_tool"></div>
+                                             </div>
+                                             <div class="pbmit-service-icon-wrapper">
+                                                <i class="pbmit-attorly-icon pbmit-attorly-icon-justice-scale-1"></i>         
+                                             </div>
+                                             <div class="pbmit-service-btn"> 
+                                                <a class="btn-arrow" href="service-details.html"></a>
+                                             </div>
+                                          </div>
+                                       </div>
+                                    </div>
+                                 </article>
                               </div>
-                              <div class="pbmit-ihbox-icon">
-                                 <div class="pbmit-icon-wrapper pbmit-icon-type-icon">
-                                    <i class="pbmit-attorly-icon pbmit-attorly-icon-customer-service"></i>
-                                 </div>
+                              <div class="swiper-slide">
+                                 <!-- Slide4 -->
+                                 <article class="pbmit-service-style-1">
+                                    <div class="pbminfotech-post-item">
+                                       <div class="d-flex">
+                                          <div class="pbmit-service-image-wrapper" style="background-image:url('images/services/service-04.jpg')">
+                                             <div class="pbmit-featured-img-wrapper">
+                                                <div class="pbmit-featured-wrapper">
+                                                   <img src="images/services/service-04.jpg" class="img-fluid" alt="">
+                                                </div>
+                                             </div>
+                                          </div>
+                                          <div class="pbminfotech-box-content pbmit-text-color-white ">
+                                             <div class="pbminfotech-box-number">04</div>
+                                             <h3 class="pbmit-service-title">
+                                                <a href="#">Marriage Contract in Law</a></h3>
+                                             <div class="pbmit-service-content">
+                                                <div class="at-above-post-homepage addthis_tool"></div>
+                                                <p>
+                                                   Diam magna consectetur nunc tristique consequat. Integer venenatis nec rutrum.
+                                                </p>
+                                                <div class="at-below-post-homepage addthis_tool"></div>
+                                             </div>
+                                             <div class="pbmit-service-icon-wrapper">
+                                                <i class="pbmit-attorly-icon pbmit-attorly-icon-contract-1"></i>        
+                                             </div>
+                                             <div class="pbmit-service-btn"> 
+                                                <a class="btn-arrow" href="service-details.html"></a>
+                                             </div>
+                                          </div>
+                                       </div>
+                                    </div>
+                                 </article>
                               </div>
-                           </div>
-                           <div class="pbminfotech-static-box-desc">Somos Ex abogados de la defesoria publica, tenemos la misma e incluso mejor talla que cualquier fiscal.</div>
-                           <div class="pbminfotech-static-box-desc">Nuestro equipo legal se ocupará de su caso de la A a la Z.</div>
-                           <div class="pbmit-ihbox-btn">
-                              <a href="contacto.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
-                                 <span>Contactanos</span>
-                              </a>
-                           </div>
-                        </div>
-                     </article>
-                     <article class="pbmit-static-box-style-1 col-md-4">
-                        <div class="pbmit-bg-imgbox pbmit-bg-imgbox-three"></div>
-                        <div class="pbmit-responsive-img">
-                           <img src="images/staticbox-01.jpg" alt="Best Legal  Defense">
-                        </div>
-                        <div class="pbmit-contentbox">
-                           <div class="pbmit-contentbox-inner d-flex justify-content-between align-items-center">
-                              <div class="pbminfotech-box-title">
-                                 <h4>¿Porque elegirnos?</h4>
+                              <div class="swiper-slide">
+                                 <!-- Slide5 -->
+                                 <article class="pbmit-service-style-1">
+                                    <div class="pbminfotech-post-item">
+                                       <div class="d-flex">
+                                          <div class="pbmit-service-image-wrapper" style="background-image:url('images/services/service-05.jpg')">
+                                             <div class="pbmit-featured-img-wrapper">
+                                                <div class="pbmit-featured-wrapper">
+                                                   <img src="images/services/service-05.jpg" class="img-fluid" alt="">
+                                                </div>
+                                             </div>
+                                          </div>
+                                          <div class="pbminfotech-box-content pbmit-text-color-white ">
+                                             <div class="pbminfotech-box-number">05</div>
+                                             <h3 class="pbmit-service-title">
+                                                <a href="#">Legal Professional Law</a></h3>
+                                             <div class="pbmit-service-content">
+                                                <div class="at-above-post-homepage addthis_tool"></div>
+                                                <p>
+                                                   Diam magna consectetur nunc tristique consequat. Integer venenatis nec rutrum.
+                                                </p>
+                                                <div class="at-below-post-homepage addthis_tool"></div>
+                                             </div>
+                                             <div class="pbmit-service-icon-wrapper">
+                                                <i class="pbmit-attorly-icon pbmit-attorly-icon-courthouse-1"></i>         
+                                             </div>
+                                             <div class="pbmit-service-btn"> 
+                                                <a class="btn-arrow" href="service-details.html"></a>
+                                             </div>
+                                          </div>
+                                       </div>
+                                    </div>
+                                 </article>
                               </div>
-                              <div class="pbmit-ihbox-icon">
-                                 <div class="pbmit-icon-wrapper pbmit-icon-type-icon">
-                                    <i class="pbmit-attorly-icon pbmit-attorly-icon-bill"></i>
-                                 </div>
-                              </div>
-                           </div>
-                           <div class="pbminfotech-static-box-desc">Nunca pagará una tarifa excesiva. </div>
-                           <div class="pbminfotech-static-box-desc">Cobertura nacional / MEDELLÍN-BOGOTÁ. </div>
-                           <div class="pbminfotech-static-box-desc">Cuatro (4) especialidades </div>
-                           <div class="pbmit-ihbox-btn">
-                              <a href="contacto.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
-                                 <span>Contactenos</span>
-                              </a>
-                           </div>
+                           </div>                   
                         </div>
-                     </article>
+                     </div>
                   </div>
                </div>
             </section>
