--- a/nosotros.html
+++ b/nosotros.html
@@ -82,12 +82,12 @@
                                              </ul>
                                           <li class="dropdown">
                                              <a href="#">Especialidades</a>
-                                            <!--  <ul>
-                                                <li><a href="#">Service Detail</a></li>
-                                                <li><a href="#">Service Detail</a></li>
-                                                <li><a href="#">Service Detail</a></li>
-                                                <li><a href="#">Service Detail</a></li>
-                                             </ul> -->
+                                             <ul>
+                                                <li><a href="derechopenal.html">Derecho Penal</a></li>
+                                                <li><a href="derechocivil.html">Derecho civil</a></li>
+                                                <li><a href="derechoinmobiliario">Derecho inmobiliario</a></li>
+                                                <li><a href="alcoholemialegales.html">Alcoholemia</a></li>
+                                             </ul>
                                           </li>
 
                                           
