--- a/index.html
+++ b/index.html
@@ -85,18 +85,13 @@
                                              </ul>
                                           <li class="dropdown">
                                              <a href="">Especialidades</a>
-                                            <ul>
-                                                <li><a href="derechocivil.html">Derecho Penal</a></li>
-                                                <li><a href="#">Derecho civil</a></li>
-                                                <li><a href="#">Derecho inmobiliario</a></li>
-                                                <li><a href="#">Alcoholemia</a></li>
+                                             <ul>
+                                                <li><a href="derechopenal.html">Derecho Penal</a></li>
+                                                <li><a href="derechocivil.html">Derecho civil</a></li>
+                                                <li><a href="derechoinmobiliario">Derecho inmobiliario</a></li>
+                                                <li><a href="alcoholemialegales.html">Alcoholemia</a></li>
                                              </ul> 
-                                          </li>
-
-                                          
-                                          <li class="">
-                                             <a href="#">Actualidad</a></li>
-                                             
+                                          </li>                                             
                                           <li><a href="#">Abogado online</a></li>
                                        </ul>
                                     </div>
@@ -104,23 +99,24 @@
                               </nav>
                            </div>
                            <div class="site-navigation ml-auto">
-                              <nav class="main-menu navbar-expand-xl navbar-light">
-                                 <div class="navbar-header">
-                                    <!-- Toggle Button --> 
-                                    <button class="navbar-toggler" type="button">
-                                       <i class="fa fa-whatsapp"></i>
-                                    </button>
+                             <nav class="main-menu navbar-expand-xl navbar-light">
+                               <div class="navbar-header">
+                                 <!-- Toggle Button --> 
+                                 <button class="navbar-toggler" type="button" style="font-size: 24px; background-color: #b8967e; color: #ffffff; width: 60px; height: 60px; border-radius: 50%; box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);">
+                                   <i class="fa fa-whatsapp"></i>
+                                 </button>
+                               </div>
+                               <div class="pbmit-mobile-menu-bg"></div>
+                               <div class="collapse navbar-collapse clearfix show" id="pbmit-menu">
+                                 <div class="pbmit-menu-wrap">
+                                   <span class="closepanel">
+                                     <i class="fa fa-whatsapp"></i>
+                                   </span>
+
+                                   <a href="https://api.whatsapp.com/send?phone=573026231220&text=Hola%21%20Quisiera%20m%C3%A1s%20contratar%20un%20defensor" target="_blank" style="color: #b8967e; font-size: 18px;"> <i class="fa fa-whatsapp"></i> Escribenos</a>
                                  </div>
-                                 <div class="pbmit-mobile-menu-bg"></div>
-                                 <div class="collapse navbar-collapse clearfix show" id="pbmit-menu">
-                                    <div class="pbmit-menu-wrap">
-                                       <span class="closepanel">
-                                          <i class="fa fa-whatsapp"></i>
-                                       </span>
-                                       <a href="https://api.whatsapp.com/send?phone=573026231220&text=Hola%21%20Quisiera%20m%C3%A1s%20contratar%20un%20defensor" target="_blank" style="color: green;">Chat</a>
-                                    </div>
-                                 </div>
-                              </nav>
+                               </div>
+                             </nav>
                            </div>
                            <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
