--- a/inicial.html
+++ b/inicial.html
@@ -102,7 +102,7 @@
                                                 </ul>
                                              </li> -->
                                           <li class="">
-                                             <a href="#">Actualidad</a></li>
+                                             <a href="#">FAQ</a></li>
                                              
                                           <li><a href="#">Abogado online</a></li>
                                        </ul>
