--- a/nosotros.html
+++ b/nosotros.html
@@ -92,7 +92,7 @@
 
                                           
                                           <li class="">
-                                             <a href="#">Actualidad</a></li>
+                                             <a href="#">FAQ</a></li>
                                              
                                           <li><a href="#">Abogado online</a></li>
                                        </ul>
