--- a/alcoholemialegales.html
+++ b/alcoholemialegales.html
@@ -85,7 +85,7 @@
                                             <ul>
                                                 <li><a href="derechopenal.html">Derecho Penal</a></li>
                                                 <li><a href="derechocivil.html">Derecho civil</a></li>
-                                                <li><a href="derechoinmobiliario">Derecho inmobiliario</a></li>
+                                                <li><a href="derechoinmobiliario.html">Derecho inmobiliario</a></li>
                                                 <li><a href="alcoholemialegales.html">Alcoholemia</a></li>
                                              </ul> 
                                           </li>
@@ -304,7 +304,7 @@
          <!-- page content -->
          <div class="page-content">
 
-            <section data-cursor="white-color">
+            <section data-cursor="white-color" style="background-color: white;">
                <div class="container">
                   <div class="row">
                      <div class="col-md-6">
