--- a/nosotros.html
+++ b/nosotros.html
@@ -85,7 +85,7 @@
                                             <ul>
                                                 <li><a href="derechopenal.html">Derecho Penal</a></li>
                                                 <li><a href="derechocivil.html">Derecho civil</a></li>
-                                                <li><a href="derechoinmobiliario">Derecho inmobiliario</a></li>
+                                                <li><a href="derechoinmobiliario.html">Derecho inmobiliario</a></li>
                                                 <li><a href="alcoholemialegales.html">Alcoholemia</a></li>
                                              </ul> 
                                           </li>
