--- a/nosotros.html
+++ b/nosotros.html
@@ -100,26 +100,7 @@
                                  </div>
                               </nav>
                            </div>
-                           <div class="site-navigation ml-auto">
-                             <nav class="main-menu navbar-expand-xl navbar-light">
-                               <div class="navbar-header">
-                                 <!-- Toggle Button --> 
-                                 <button class="navbar-toggler" type="button" style="font-size: 24px; background-color: #b8967e; color: #ffffff; width: 60px; height: 60px; border-radius: 50%; box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);">
-                                   <i class="fa fa-whatsapp"></i>
-                                 </button>
-                               </div>
-                               <div class="pbmit-mobile-menu-bg"></div>
-                               <div class="collapse navbar-collapse clearfix show" id="pbmit-menu">
-                                 <div class="pbmit-menu-wrap">
-                                   <span class="closepanel">
-                                     <i class="fa fa-whatsapp"></i>
-                                   </span>
-
-                                   <a href="https://api.whatsapp.com/send?phone=573026231220&text=Hola%21%20Quisiera%20m%C3%A1s%20contratar%20un%20defensor" target="_blank" style="color: #b8967e; font-size: 18px;"> <i class="fa fa-whatsapp"></i> Escribenos</a>
-                                 </div>
-                               </div>
-                             </nav>
-                           </div>
+                           
                            <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
@@ -129,6 +110,9 @@
                                  </div>
                               </div>
                            </div>
+                           <button type="button" style="font-size: 24px; background-color: #b8967e; color: #ffffff; width: 60px; height: 60px; border-radius: 50%; box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);"> 
+                             <a href="https://api.whatsapp.com/send?phone=573026231220&text=Hola%21%20Quisiera%20m%C3%A1s%20contratar%20un%20defensor" target="_blank" style="color: #f8f9fa;    font-size: 28px;"> <i class="fa fa-whatsapp"></i></a>
+                           </button>
                         </div>
                      </div>
                   </div>
